# GameOfLife

./: CMakeLists.txt
include/: Board.h  Game.h  Player.h  Tile.h
src/: Board.cpp  Game.cpp  Player.cpp  sfmltest.cpp
